[package]
name = "illumos-image-builder"
version = "0.0.0"
edition = "2018"
license = "MPL-2.0"

[lib]
name = "illumos_image_builder"
path = "src/lib.rs"

[[bin]]
name = "image-builder"
path = "src/main.rs"

[dependencies]
anyhow = "1"
libc = "0.2"
jmclib = { git = "https://github.com/jclulow/rust-jmclib" }
getopts = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
uuid = { version = "1.1.2", features = [ "serde", "v4" ] }
digest = "0.10.3"
md-5 = "0.10.1"
sha-1 = "0.10.0"
glob = "0.3"
walkdir = "2"
slog = { version = "2.7.0", features = ["max_level_info", "release_max_level_info"] }
slog-term = "2.9.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-async = "2.7"
slog-syslog = { version = "0.13"}
log = { version = "0.4"}
